# umami-app

./: .gitignore  db.sqlite3  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  umami.conf  www.umami.conf
backedup-comps/: BatchEdit.js  BatchItemInputs.js
backend/: serializers.py  settings.py  settings.py.example  urls.py  views.py
kitchen/: admin.py  models.py  serializers.py
kitchen/migrations/: 0001_initial.py  0002_remove_batch_rations_sold.py  0003_batch_rations_sold.py
src/: App.js  Main.js  utils.js
src/Batches/: BatchEdit.js  BatchItemInputs.js  BatchList.js
src/Ingredients/: IngredientEdit.js  IngredientList.js
src/MainMenu/: Menu.js
src/Receipts/: ItemInputs.js  ReceiptEdit.css  ReceiptEdit.js  ReceiptList.js
src/Recipes/: RecipeEdit.js  RecipeList.js
src/Stock/: Stock.js
src/actions/: api.js  auth.js  index.js
src/components/: App.js  Menu.js  utils.js
src/components/Batches/: BatchEdit.js  BatchItemInputs.js  BatchList.js
src/components/Form/: FormItem.js  FormItemList.js  TestForm.js
src/components/Ingredients/: IngredientEdit.js  IngredientList.js
src/components/Login/: Login.jsx
src/components/Receipts/: ItemInputs.js  ReceiptEdit.js  ReceiptList.js
src/components/Recipes/: RecipeEdit.js  RecipeItemInputs.js  RecipeList.js
src/components/Sales/: SaleEdit.js  SaleItemInputs.js  SalesList.js
src/components/Stock/: Stock.js
src/components/css/: umami.css
src/reducers/: index.js
umami-app/: pip-selfcheck.json
